<resources>
    <string name="app_name">Learning</string>
    <string name="input_username">用户名</string>
    <string name="input_password">密码</string>
    <string name="rem_password">记住密码</string>
    <string name="login">登录</string>
    <string name="register">立即注册</string>
    <string name="getIdentifyingCode">获取验证码</string>
    <string name="submit">注册</string>
    <string name="clear">重置</string>
    <string name="forgetPassword">忘记密码？</string>
    <string name="phone">请输入您的手机号码</string>
    <!--UI-->
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="recommend">推荐</string>
    <string name="listen">听力</string>
    <string name="speak">口语</string>
    <string name="my">我的</string>
    <string name="about">关于</string>
    <string name="time">4:50</string>
    <string name="singer">歌手</string>
    <string name="artist">作者</string>
    <string name="introduction">elearning是一款致力于帮助大家更好的学习英语的APP，由团队制作完成</string>
</resources>
