<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lenovo.learning.com.tekinarslan.material.musicList.MusicPlayer">
    <android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="580dp"
        android:id="@+id/music_recycler_view"/>
    <!--导航栏-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom">
        <TextView
            android:id="@+id/main"
            android:layout_weight="1"
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:text="@string/recommend"
            android:gravity="center"
            android:onClick="onClick"/>
        <TextView
            android:id="@+id/listen"
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/listen"
            android:gravity="center"
            android:onClick="onClick"/>
        <TextView
            android:id="@+id/spokenEnglish"
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/speak"
            android:gravity="center"
            android:onClick="onClick"/>
        <TextView
            android:id="@+id/like"
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/my"
            android:gravity="center"
            android:onClick="onClick"/>
    </LinearLayout>
</RelativeLayout>
