<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/myListView"
            android:layout_below="@+id/sliding_tabs"
            android:layout_marginBottom="40dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue">
        </ListView>
    </LinearLayout>
    <!--导航栏-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom">

        <TextView
            android:id="@+id/main"
            android:layout_weight="1"
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:text="@string/recommend"
            android:gravity="center"
            android:onClick="onClick"/>
        <TextView
            android:id="@+id/listen"
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/listen"
            android:gravity="center"
            android:onClick="onClick"/>
        <TextView
            android:id="@+id/spokenEnglish"
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/speak"
            android:gravity="center"
            android:onClick="onClick"/>
        <TextView
            android:id="@+id/like"
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/my"
            android:gravity="center"
            android:onClick="onClick"/>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>