<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_translucent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/userpic"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:background="@mipmap/ic_launcher"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:onClick="myClick"
            android:adjustViewBounds="true" />
        <TextView
            android:id="@+id/mydownloads"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="我的音频"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:background="#FFFFFF"
            android:textColor="@color/black_translucent"
            android:textSize="24dp"
            android:onClick="myClick"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/mysettings"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="我的打赏"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:background="#FFFFFF"
            android:textColor="@color/black_translucent"
            android:textSize="24dp"
            android:onClick="myClick"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/about"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:background="#FFFFFF"
            android:textColor="@color/black_translucent"
            android:textSize="24dp"
            android:onClick="myClick"
            android:layout_gravity="center"/>
    </LinearLayout>
    <!--导航栏-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom">
        <TextView
            android:id="@+id/main"
            android:layout_weight="1"
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:text="@string/recommend"
            android:gravity="center"
            android:onClick="onClick"/>
        <TextView
            android:id="@+id/listen"
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/listen"
            android:gravity="center"
            android:onClick="onClick"/>
        <TextView
            android:id="@+id/spokenEnglish"
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/speak"
            android:gravity="center"
            android:onClick="onClick"/>
        <TextView
            android:id="@+id/like"
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/my"
            android:gravity="center"
            android:onClick="onClick"/>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>