<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:background="@mipmap/ic_launcher"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:id="@+id/txt_registername"
        android:hint="用户名"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/txt_register_firstpassword"
        android:inputType="textPassword"
        android:hint="密码"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/txt_register_secondpassword"
        android:inputType="textPassword"
        android:hint="确认密码"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_getIdentifyingCode"
            android:text="@string/getIdentifyingCode"
            android:onClick="getIdentifyingCode"
            android:layout_alignTop="@+id/txt_registerphonenumber"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/txt_registerphonenumber"
            android:layout_toLeftOf="@+id/btn_getIdentifyingCode"
            android:layout_toStartOf="@+id/btn_getIdentifyingCode"
            android:hint="@string/phone"/>

    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/txt_IdentifyingCode"
        android:hint="请输入验证码："/>

    <Button
        android:paddingLeft="50dp"
        android:paddingRight="70dp"
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"

        android:text="@string/submit"
        android:onClick="Submit" />


</LinearLayout>